--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  background-color: #e5e5fd;
+  background-color:skyblue;
   min-height: 100vh;
   border: 10px solid #1d1e4c;
 }
